--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">GroupProject</string>
+    <string name="tab_label_item">动态浏览</string>
+    <string name="tab_label_self_item">个人主页</string>
+    <string name="tab_label_self_center">个人中心</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
