--- a/docs/接口.md
+++ b/docs/接口.md
@@ -1,6 +1,6 @@
 ### 普通接口
 
-#### 接受均为json，返回均为json，数据在‘data’中，信息在'msg'中，成功时状态码为200，否则为400
+#### 接受均为json，返回均为json，(update user与send item为特例，需要发送multipart form)数据在‘data’中，信息在'msg'中，成功时状态码为200，否则为400
 
 #### /get/self_item/ 获取自己动态
 
@@ -21,19 +21,38 @@ method:post
 method:post
 
 接受
+其中search search_type 可为空字符串
 
-| key         | value_type   | comment             |
-| ----------- | ------------ | ------------------- |
-| user_id     | int          | 当前操作的用户      |
-| search      | string       | 搜索内容            |
-| search_type | string       | 搜索user或title     |
-| type        | bool list[4] | 是否包含某种类型    |
-| follower    | bool         | 是否只有关注者动态  |
-| sort        | string       | time或like或comment |
+| key         | value_type   | comment              |
+| ----------- | ------------ | -------------------- |
+| user_id     | int          | 当前操作的用户       |
+| search      | string       | 搜索内容             |
+| search_type | string       | 搜索user或title或content      |
+| type        | bool list[4] | 是否包含某种类型     |
+| follower    | bool         | 是否只有关注者动态   |
+| sort        | string       | time或like或comment  |
+| order       | int          | 0表示正序，1表示倒序 |
 
 返回
 
 一个list，内容为item的json，失败返回msg:no item
+
+#### /user/get/ 获取用户信息
+
+method:post
+
+接受
+
+| key     | value_type | comment  |
+| ------- | ---------- | -------- |
+| user_id | int        | 用户的id |
+
+返回
+
+user的json
+以及"src_follower_id":关注用户列表
+"dst_follower_id":被关注用户列表
+"ban_id":拉黑用户列表
 
 #### /user/login/ 登录
 
@@ -41,14 +60,15 @@ method:post
 
 接受
 
-| key       | value_type | comment |
-| --------- | ---------- | ------- |
-| user_name | string     | 用户名  |
-| password  | string     | 密码    |
+| key       | value_type | comment      |
+| --------- | ---------- | ------------ |
+| user_name | string     | 用户名 |
+| password  | string     | 密码         |
+|email|string|邮箱|
 
 返回
 
-若成功返回id为user的id，否则返回msg:user not found
+若成功返回id为user的id，若用户名与邮箱都找不到返回user not found 若能找到但对不上返回wrong password
 
 #### /user/register/ 注册
 
@@ -60,36 +80,26 @@ method:post
 | --------- | ---------- | ------- |
 | user_name | string     | 用户名  |
 | password  | string     | 密码    |
+|email|string|邮箱|
 
 返回
 
-若成功返回msg:ok 否则返回msg:user_name already exists
+若成功返回msg:ok 否则返回msg:user_name already exists或者email already exists
 
-#### /user/update_image/ 上传头像
+#### /user/update/ 修改用户信息
 
 method:post
 
-接受
+接受（不需要修改的传空字符串）
 
 | key             | value_type | comment  |
 | --------------- | ---------- | -------- |
 | user_id         | INT        | 用户的id |
-| user_image_name | string     | 用户头像 |
-
-返回
-
-msg:ok 
-
-#### /user/update_introduction/ 上传介绍
-
-method:post
-
-接受
-
-| key          | value_type | comment  |
-| ------------ | ---------- | -------- |
-| user_id      | INT        | 用户的id |
-| introduction | string     | 用户介绍 |
+| user_image | FILE     | 用户头像 |
+| introduction    | string     | 用户介绍 |
+| user_name    | string     | 用户名 |
+| password        | string     | 密码     |
+| email           | string     | 邮箱     |
 
 返回
 
@@ -110,6 +120,51 @@ method:post
 
 若成功返回msg:ok 否则返回msg:src/dst user not found
 
+#### /user/follow/delete/ 取消关注
+
+method:post
+
+接受
+
+| key         | value_type | comment          |
+| ----------- | ---------- | ---------------- |
+| src_user_id | INT        | 发出关注用户的id |
+| dst_user_id | INT        | 被关注用户的id   |
+
+返回
+
+若成功返回msg:ok 否则返回msg:src/dst user not found
+
+#### /user/ban/ 屏蔽
+
+method:post
+
+接受
+
+| key         | value_type | comment          |
+| ----------- | ---------- | ---------------- |
+| src_user_id | INT        | 发出屏蔽用户的id |
+| dst_user_id | INT        | 被屏蔽用户的id   |
+
+返回
+
+若成功返回msg:ok 否则返回msg:src/dst user not found
+
+#### /user/ban/delete/取消屏蔽
+
+method:post
+
+接受
+
+| key         | value_type | comment          |
+| ----------- | ---------- | ---------------- |
+| src_user_id | INT        | 发出屏蔽用户的id |
+| dst_user_id | INT        | 被屏蔽用户的id   |
+
+返回
+
+若成功返回msg:ok 否则返回msg:src/dst user not found
+
 #### /item/send/ 发布动态
 
 method:post
@@ -119,10 +174,11 @@ method:post
 |    Key    |  类型   |          描述          |
 | :-------: | :-----: | :--------------------: |
 |  user_id  |   INT   |   创建该动态用户的id   |
+|   title   | string  |          标题          |
 |  content  |  TEXT   |      动态文字内容      |
 |   type    |   INT   | 四种（文、图、音、视） |
 | location  | VARCHAR |        位置信息        |
-| file_name | VARCHAR |     相应动态的文件     |
+| file | File |     相应动态的文件     |
 
 返回
 
