--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -78,7 +78,10 @@
 |     Key      |   类型   |           描述           |
 | :----------: | :------: | :----------------------: |
 |      id      |   INT    | 每个通知对应的唯一一个id |
+| src_user_id  |   INT    |     发出通知的用户id     |
 | dst_user_id  |   INT    |       通知的目标id       |
 | created_time | DATETIME |      创建动态的时间      |
 |   content    |  string  |         通知内容         |
+|     type     |  string  |       标注通知类型       |
+|   item_id    |   int    |  触发通知的动态或点赞id  |
 
